package edu.fiuba.algo3.modelo.comodin;

import edu.fiuba.algo3.modelo.jugada.Jugada;

public interface ActivacionComodin {
    int activaciones(Jugada jugada, int cartasDescartadas);
}
